force-app/main/default/objects/Bike_Rental__c/Bike_Rental__c.object-meta.xml
<CustomObject>
    <label>Bike Rental</label>
    <pluralLabel>Bike Rentals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Rental ID</label>
        <type>AutoNumber</type>
        <displayFormat>RNT-{00000}</displayFormat>
    </nameField>
</CustomObject>