force-app/main/default/objects/Bike_Rental__c/fields/Bike_Type__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type__c</fullName>
    <label>Bike Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>