force-app/main/default/objects/Bike_Rental__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <label>Duration Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>