force-app/main/default/objects/Bike_Rental__c/fields/Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount__c</fullName>
    <label>Rental Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>