force-app/main/default/objects/Bike_Rental__c/fields/Rental_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rental_Hours__c</fullName>
    <label>Rental Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>