force-app/main/default/objects/Bike_Rental__c/fields/Rental_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Start_Date__c</fullName>
    <label>Rental Start Date</label>
    <type>Date</type>
</CustomField>